# ZPack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _cfg.in.h  _endianness.cpp  _endianness.h  _prepare_int.h  main.cpp  main_link.cpp  main_test.cpp  zpack.cpp  zpack.h  zpack_compression.cpp  zpack_compression.h  zpack_zstd.cpp  zpack_zstd.h
